--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "massive": "^4.4.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.0"
   }
 }
